# soulservice

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  RESEARCH.md  alembic.ini  docker-compose.yml  example-soul.yaml  pyproject.toml  restart.sh
.cursor/rules/: language-and-style.mdc  public-repo-security.mdc
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_force_rls.py  0003_web_login_tokens.py  0004_web_admin_grants.py  001_baseline.py  002_add_facts_status.py  003_add_properties_status.py
docs/: functional-overview.md  production-deployment-security.md
infra/: init.sql
src/soulservice/: __init__.py  chat.py
src/soulservice/cli/: main.py
src/soulservice/core/: audit.py  auth.py  config.py  crypto.py  db.py  embeddings.py  injection.py  portability.py  ratelimit.py
src/soulservice/mcp/: middleware.py  server.py
src/soulservice/mcp/tools/: facts.py  identity.py  memory.py  meta.py  properties.py  review.py
src/soulservice/models/: adaptation.py  audit.py  fact.py  memory.py  property.py  proposal.py  soul.py  tenant.py  token.py
src/soulservice/web/: __init__.py  __main__.py  app.py  auth.py  db.py  mail.py  queries.py  templating.py  throttle.py
src/soulservice/web/routes/: audit.py  auth_routes.py  dashboard.py  facts.py  memories.py  portability.py  properties.py  proposals.py  self_core.py  tokens.py
src/soulservice/web/static/: app.css
src/soulservice/web/templates/: audit.html  base.html  dashboard.html  facts.html  login.html  memories.html  memory_detail.html  portability.html  properties.html  proposals.html  self_core.html  tokens.html  verify_confirm.html
tests/: conftest.py  test_auth.py  test_crypto.py  test_facts.py  test_history.py  test_injection.py  test_memory.py  test_messenger_mode.py  test_portability.py  test_properties.py  test_ratelimit.py  test_rls_isolation.py  test_untrusted_wrapping.py  test_web.py
