[project]
name = "soulservice"
version = "0.1.0"
description = "MCP-based platform for AI personalities with memory, identity, and relationships"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27,<2",
    "sqlmodel>=0.0.24",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "argon2-cffi>=23.1",
    "cryptography>=44.0",
    "httpx>=0.28",
    "uvicorn>=0.34",
    "starlette>=0.46",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2",
    "aiosmtplib>=3.0",
    "pyyaml>=6.0",
    "pgvector>=0.4",
    "anthropic>=0.102.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pip-audit>=2.9",
]

[project.scripts]
soulctl = "soulservice.cli.main:cli"
soulservice-chat = "soulservice.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soulservice"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# TCH (flake8-type-checking) is intentionally not enabled: the codebase uses
# `from __future__ import annotations` everywhere, so type-only imports at module
# top are free and kept there for readability instead of TYPE_CHECKING blocks.
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
